fix(navigation): menu item overflow

--- a/src/styles/theme/navigation.scss
+++ b/src/styles/theme/navigation.scss
@@ -90,6 +90,7 @@
 
       .collapse-project-button-placeholder {
         width: 1.625rem;
+        flex-shrink: 0;
       }
 
       > a {
